mobile.css
.m-grid {
  height: 100vh;
  display: grid;
  grid-template-rows: 110px 600px 200px 600px 200px 200px 600px 200px 600px 100px;
  grid-template-columns: 1fr;
}

.grid-hash {
  height: 100vh;
  display: grid;
  grid-template-rows: 120px 1350px 2100px 2100px 1020px 1650px 2150px 2250px 960px 110px;
  grid-template-columns: 1fr;
}

.stripe {
  /*border-bottom: 20px solid #367960;*/
  background: #efe; /* For browsers that do not support gradients */
  grid-column-start: 1;
  grid-column-end: 5;
  display: inline;
  font-size: 3em;
  /*text-align: right;*/
  /*text-decoration: none;*/
}

a:visited, a:link {
  text-decoration: none;
  color: #333;
}

.content1 {
  background-color: orange;
  /*border-right: 3px solid #F78018;*/
  /*border: 9px solid #DA9473;*/
  grid-column-start: 1;
  grid-column-end: span 1;
  font-size: 2em;
  color: #fff;
  letter-spacing: 7px;
  padding: 0px 0 0 10px;
  text-align: center;
}

#smalltext {
  font-size: 15px;
  letter-spacing: 2px;
}

.content2 {
  /*border-left: 3px solid #eee;*/
  background-color: #FAE597;
  grid-column-start: 2;
  grid-column-end: span 1;
  /*padding: 30px 15px 0 55px;*/
  height: 150px;
}

.content2 h3, .content5 h3, .content7 h3 {
  text-align: right;
  font-size: 1.5em;
  /*color: #eee;*/
}

.content3 {
  /*border: 2px solid #ffcf23;*/
  background-color: #fff;
  grid-column-start: 3;
  grid-column-end: span 1;
}

.content4 {
  /*border: 4px solid white;*/
  background-color: #389E77;
  grid-column-start: 4;
  grid-column-end: span 1;
  height: 150px;
}

.content5 {
  background-color: #efe;
  grid-column-start: 1;
  grid-column-end: span 1;
  height: 150px;
}

.content6 {
  background-color: #fff;
  grid-column-start: 2;
  grid-column-end: span 1;
}

.content7 {
  background-color: antiquewhite;
  grid-column-start: 3;
  grid-column-end: span 1;
  height: 150px;
}

.content8 {
  background-color: #fff;
  grid-column-start: 4;
  grid-column-end: span 1;
}

#namespan {
  padding-left: 10px;
}

#titlespan {
  float: right;
  padding-right: 10px;
  color: darkorange;
  font-size: .8em;
}
/*
.fillings1 p {
  font-family: 'Oswald', sans-serif;
  font-size: 1.3em;
  padding: 10px 10px 10px 10px;
}*/

.hash, .infoshop, .blick {
  /*display: inline-block;*/
  /*flex-direction: column;*/
  /*justify-content: center;*/
  /*padding: 24px 10px 0px 35px;*/
}

.hash {
  padding: 25px 10px 0px 35px;
}

.infoshop {
  padding: 65px 0px 0px 20px;
}

.blick {
  padding: 55px 0px 0px 16px;
}

.mobileproject {
 font-family: 'Merriweather Sans', sans-serif;
 font-size: 2.5em;
}

.content1-hash {
  background-color: #fff;
  color: #222;
  text-align: center;
  padding: 35px 0 0 0;
  grid-column-start: 1;
  grid-column-end: span 1;
}

.content2-hash {
  background-color: #fff;
  color: #222;
  text-align: center;
  padding: 25px 30px 20px 30px;
  grid-column-start: 1;
  grid-column-end: span 1;
}

.content3-hash {
  grid-column-start: 1;
  grid-column-end: span 1;
  text-align: center;
  background-color: #efe;
  padding: 55px 160px 0 70px;
  display: inline-block;
}

.content3-hash img {
  float: left;
  padding: 0 70px 0 15px;
}

.content4-hash {
  grid-column-start: 1;
  grid-column-end: span 1;
  text-align: center;
  background-color: #fff;
  padding: 85px 160px 0 70px;
  /*display:flex;*/
  /*justify-content: flex-start;*/
  display: inline-block;
  /*float: left;*/
}

.content4-hash img {
  float: left;
  padding: 40px 90px 0 15px;
}

.centerimage {
  padding: 65px 0 30px 0;
}

.content5-hash {
  grid-column-start: 1;
  grid-column-end: span 1;
  text-align: center;
  background-color: #fff;
  padding: 35px 10px 0 30px;
}

.content6-hash {
  grid-column-start: 1;
  grid-column-end: span 1;
  text-align: center;
  padding: 75px 70px 70px 30px;
  background-color: #48758A;
  color: #fff;

}

.content7-hash {
  grid-column-start: 1;
  grid-column-end: span 1;
  text-align: center;
  background-color: #fff;
  padding: 75px 70px 70px 30px;
}

.content8-hash {
  grid-column-start: 1;
  grid-column-end: span 1;
  text-align: center;
  background-color: #efe;
  padding: 35px 30px 0 30px;
}

.textbox {
  width: 75%;
  margin: auto;
}

.bottom.stripe {
  text-align: center;
  font-size: 2.4em;
}

